ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64)

SET(IPDB_SOURCES
  ipdb.cpp
)
ADD_LIBRARY(ipdb STATIC ${IPDB_SOURCES})

SET(IPDBMAKER_SOURCES
  main.cpp
)
ADD_EXECUTABLE(ipdbmaker ${IPDBMAKER_SOURCES})

TARGET_LINK_LIBRARIES(ipdbmaker ipdb)

ADD_DEPENDENCIES(ipdbmaker ipdb)

INSTALL(FILES ipdb.h
  DESTINATION include)
INSTALL(TARGETS ipdb ipdbmaker
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION bin
)
